--- a/2022/day4/.vscode/launch.json
+++ b/2022/day4/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/main",
-        "args": ["<", "${workspaceFolder}/input.txt"],
+        "args": [],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
         "environment": [],
