--- a/2023/day14/Cargo.toml
+++ b/2023/day14/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# fasthash = "0.4"
+lru = "0.12"
