--- a/2024/day01/Cargo.toml
+++ b/2024/day01/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 [dependencies]
 aoc.workspace = true
 arrow.workspace = true
+arrow-array.workspace = true
+arrow-schema.workspace = true
+datafusion.workspace = true
+plex.workspace = true
 tokio.workspace = true
