--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -12,4 +12,8 @@ edition = "2021"
 aoc = { path = "./aoc"}
 
 arrow = "53.3"
+arrow-array = "53.3"
+arrow-schema = "53.3"
+datafusion = "43.0"
+plex = "0.3.1"
 tokio = {version = "1", features = ["full"]}
