--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = [
     "aoc",
     "day01",
-    "day02", "day03",
+    "day02", "day03", "day04",
 ]
 
 [workspace.package]
