added cirtierion for benchmarks

--- a/2024/day05/Cargo.toml
+++ b/2024/day05/Cargo.toml
@@ -9,3 +9,10 @@ arrow-array.workspace = true
 arrow-schema.workspace = true
 datafusion.workspace = true
 tokio.workspace = true
+
+[dev-dependencies]
+criterion.workspace = true
+
+[[bench]]
+name = "bench"
+harness = false
