--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -13,10 +13,11 @@ edition = "2021"
 aoc = { path = "./aoc"}
 
 arrow = "53.3"
-criterion = "0.3"
+criterion = "0.5.1"
 arrow-array = "53.3"
 arrow-schema = "53.3"
 datafusion = "43.0"
 plex = "0.3.1"
+pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
 tokio = {version = "1", features = ["full"]}
 
