--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -17,7 +17,9 @@ criterion = "0.5.1"
 arrow-array = "53.3"
 arrow-schema = "53.3"
 datafusion = "43.0"
+futures = "0.3.31"
 plex = "0.3.1"
 pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
 tokio = {version = "1", features = ["full"]}
+tokio-stream = "0.1"
 
