--- a/2024/day07/Cargo.toml
+++ b/2024/day07/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
+futures.workspace = true
+tokio.workspace = true
+tokio-stream.workspace = true
