set day08 bench

--- a/2024/day08/Cargo.toml
+++ b/2024/day08/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
+
+[dev-dependencies]
+criterion.workspace = true
+
+[[bench]]
+name = "bench"
+harness = false
