--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -18,6 +18,7 @@ arrow-array = "53.3"
 arrow-schema = "53.3"
 datafusion = "43.0"
 futures = "0.3.31"
+itertools = "0.9.0"
 plex = "0.3.1"
 pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
 tokio = {version = "1", features = ["full"]}
