--- a/2024/day08/Cargo.toml
+++ b/2024/day08/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
+itertools.workspace = true
 
 [dev-dependencies]
 criterion.workspace = true
