cut down execution time by half

--- a/2024/day10/Cargo.toml
+++ b/2024/day10/Cargo.toml
@@ -5,3 +5,10 @@ edition.workspace = true
 
 [dependencies]
 itertools.workspace = true
+
+[dev-dependencies]
+criterion.workspace = true
+
+[[bench]]
+name = "bench"
+harness = false
